# BuggyLogTrace

./: CMakeLists.txt  README.md
BuggyLog/: log.cpp  log.hpp
cmake/: BuggyLogTraceConfig.cmake.in
test/: test.cpp
